<resources>
    <string name="app_name">GroceryShoppingApp</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="create_items">Create Items</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="quantity">Quantity</string>
    <string name="save">save</string>
    <string name="saveUpdate" />
    <string name="del">del</string>
    <string name="item_name">Item name</string>
    <string name="lasting_days">Lasting days</string>
    <string name="price">Price</string>


    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="create_list">Create List</string>
    <string name="name">name</string>
    <string name="remove_list">remove list</string>
    <string name="none">none</string>
    <string name="days">days</string>
    <string name="list_name">list name</string>
    <string name="shop_name">shop name</string>
    <string name="priceText">price</string>
    <string name="product_name">product name</string>
    <string name="manage_items">Manage Items</string>
    <string name="manage_list">Manage List</string>
    <string name="items">Items</string>
    <string name="notifications">Notifications</string>
    <string name="shopping_date">Shopping Date</string>
    <string name="report">Report</string>
    <string name="lists">Lists</string>
    <string name="NoDate">no date has been selected</string>
    <string name="no_date_has_been_selected">no date has been selected</string>
    <string name="schedule">Schedule</string>
    <string name="all_notifications">All Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="amount">amount</string>
    <string name="add">add</string>
    <string name="finish">finish</string>
    <string name="total">total</string>
    <string name="leftover">% leftover</string>
    <string name="part_of">Part of :</string>
    <string name="no_price_found">No price set</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="_000">000</string>
    <string name="view">view</string>
    <string name="select_a_list">select a list</string>
    <string name="list_name_label">"List name : "</string>
    <string name="item_name_report">"Item name : "</string>
    <string name="every_list_report">every list</string>
    <string name="every_shop_report">every shop</string>
    <string name="date_report">"Date : "</string>
    <string name="_1">1</string>
    <string name="bought">bought</string>
</resources>