<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".View.ShoppingDate.ShoppingActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:gravity="center"
            android:id="@+id/newName"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/newAmount"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:gravity="center"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/newPrice"
            android:gravity="center"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/price" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/add"
            android:onClick="addNew"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/topPanel"
        android:gravity="top"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shopping_Recycler_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3F51B5"
            android:backgroundTint="@color/blue"
            android:clickable="true"
            tools:listitem="@layout/shopping_item" />

    </LinearLayout>
        <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:columnCount="4">

        <Button
            android:id="@+id/finishBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="2"
            android:backgroundTint="@color/red"
            android:onClick="save"
            android:text="@string/finish"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/total"
            android:textSize="18sp" />
        </GridLayout>
    </LinearLayout>