<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.Layer.ListsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/test_list"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        layoutManager="LinearLayoutManager"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:listitem="@layout/lists_item"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/listName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="text" />

            <EditText
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shopname"
                android:hint="@string/shop_name"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/createList"
                android:text="@string/create_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/delList"
                android:text="@string/remove_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>