<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/del_list_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/del"
            android:visibility="invisible"
            app:backgroundTint="@color/del_btn"
            app:fabSize="mini"
            app:rippleColor="@color/black"
            app:srcCompat="@drawable/ic_x" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/productName_list_copy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/product_name" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/quantity_list_copy"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints="2"
                android:gravity="center"
                android:hint="@string/quantity"
                android:inputType="number" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_list_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/saveUpdate"
            app:backgroundTint="@color/save_btn"
            app:fabSize="mini"
            app:rippleColor="@color/black"
            app:srcCompat="@drawable/ic_checked" />

    </LinearLayout>

   </androidx.cardview.widget.CardView>
</LinearLayout>