<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".View.ShoppingDate.ShoppingFragment">


    <LinearLayout
        android:id="@+id/shoppingTop"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:gravity="center"
            android:id="@+id/newName"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:autofillHints="bread" />

        <EditText
            android:id="@+id/newAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/amount"
            android:gravity="center"
            android:inputType="number"
            android:autofillHints="3" />

        <EditText
            android:id="@+id/newPrice"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"

            android:hint="@string/price"
            android:autofillHints="2.5" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/add"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/totalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:layout_below="@+id/shoppingTop"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:textColor="@color/main"
            android:gravity="center_vertical|end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Total : "/>

        <TextView
            android:gravity="center_vertical"
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/select_color"
            android:text="@string/total" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/listSpinner"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="These are you lists with a shop"/>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/topPanel"
        android:gravity="top"
        android:layout_below="@+id/totalLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shopping_Recycler_View"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3F51B5"
            android:backgroundTint="@color/main"
            android:clickable="true"
            tools:listitem="@layout/shopping_item" />

    </LinearLayout>
</RelativeLayout>