<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Lists.ListsFragment">

<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:name="com.ignas.android.groceryshoppingapp.ui.main.ItemFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemHead"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-3dp"
        android:layout_marginRight="16dp"
        android:background="#3F51B5"
        android:backgroundTint="@color/main"
        android:clickable="true"
        tools:listitem="@layout/item" />

    <LinearLayout
        android:id="@+id/itemHead"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cur_productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Bread"
                android:gravity="center"
                android:inputType="text"
                android:hint="@string/item_name" />

            <EditText
                android:id="@+id/cur_lastingDays"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="6"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/lasting_days" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cur_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="2.50"
                android:gravity="center"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/saveFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:backgroundTint="@color/save_btn"
                    android:contentDescription="@string/none"
                    android:src="@drawable/ic_baseline_save_alt_24"
                    app:fabSize="mini"
                    app:rippleColor="#020202" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/delFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:backgroundTint="@color/del_btn"
                    android:contentDescription="none"
                    android:src="@drawable/ic_baseline_delete_24"
                    app:fabSize="mini"
                    app:rippleColor="#000000" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingEnd="30dp"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="Bought"
            android:textColor="@color/purple_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/reSync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/none"
            android:src="@drawable/ic_checked"
            app:backgroundTint="@color/purple_200"
            app:rippleColor="@color/select_color"
            app:fabSize="mini" />
    </LinearLayout>

</FrameLayout>