<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"

    android:fitsSystemWindows="false">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main"
            android:keyboardNavigationCluster="true"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_baseline_menu_24"
            app:title="Grocery Shopping App"
            app:titleMarginStart="50dp"
            app:titleTextColor="@color/white" />

        <com.google.android.material.tabs.TabLayout

            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:tabIconTint="@color/main"
            app:tabIndicator="@android:drawable/bottom_bar"
            app:tabIndicatorColor="@color/main"
            app:tabIndicatorHeight="5dp"
            app:tabRippleColor="@color/main"
            app:tabSelectedTextColor="@color/select_color"
            app:tabTextColor="@color/main">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ItemFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_items"
                android:text="@string/items" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ListsFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_list"
                android:text="@string/lists" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ShoppingDateFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_shopping_cart__1_"
                android:text="Notifications" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ReportFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_report"
                android:text="@string/report" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ShoppingFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_shopping"
                android:text="Shopping" />

        </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </androidx.viewpager.widget.ViewPager>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_list"/>

</androidx.drawerlayout.widget.DrawerLayout>